tests/ui/suggestions/type-mismatch-struct-field-shorthand-2.stderr
error[E0308]: mismatched types
  --> $DIR/type-mismatch-struct-field-shorthand-2.rs:5:19
   |
LL |     let _ = RGB { r, g, c };
   |                   ^ expected `f64`, found `f32`
   |
help: you can convert an `f32` to an `f64`
   |
LL |     let _ = RGB { r: r.into(), g, c };
   |                   ++  +++++++

error[E0308]: mismatched types
  --> $DIR/type-mismatch-struct-field-shorthand-2.rs:5:22
   |
LL |     let _ = RGB { r, g, c };
   |                      ^ expected `f64`, found `f32`
   |
help: you can convert an `f32` to an `f64`
   |
LL |     let _ = RGB { r, g: g.into(), c };
   |                      ++  +++++++

error[E0560]: struct `RGB` has no field named `c`
  --> $DIR/type-mismatch-struct-field-shorthand-2.rs:5:25
   |
LL |     let _ = RGB { r, g, c };
   |                         ^ help: a field with a similar name exists: `b`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0308, E0560.
For more information about an error, try `rustc --explain E0308`.
